--- a/connector-activemq-ssl.yaml
+++ b/connector-activemq-ssl.yaml
@@ -19,10 +19,10 @@ spec:
     confluent.topic.bootstrap.servers: "kafka.confluent.svc.cluster.local:9071"
     confluent.topic.security.protocol: "SSL"
     confluent.topic.ssl.truststore.location: "/mnt/sslcerts/truststore.p12"
-    confluent.topic.ssl.truststore.password: "mystorepassword"
+    confluent.topic.ssl.truststore.password: "<mystorepassword>"
     confluent.topic.ssl.keystore.location: "/mnt/sslcerts/keystore.p12"
-    confluent.topic.ssl.keystore.password: "mystorepassword"
-    confluent.topic.ssl.key.password: "mystorepassword"
+    confluent.topic.ssl.keystore.password: "<mystorepassword>"
+    confluent.topic.ssl.key.password: "<mystorepassword>"
     activemq.username: "<username>"
     activemq.password: "<password>"
 
